fix wraps again

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -373,8 +373,8 @@ section {
 .wrap {
 	position: relative;
 	margin: 0 auto;
-	padding: 0 30px;
-	max-width: 80%;
+	padding: 0px;
+	max-width: 90%;
 
 	// @include mq(tabletp) {
 	// 	padding: 0;
